# loeres

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md  ROADMAP.md  rust-toolchain.toml
.cargo/: config.toml
.github/: CODE_OF_CONDUCT.md  SECURITY.md
.github/workflows/: ci.yml  msrv.yml  no-std.yml  release.yml
crates/loeres/: Cargo.toml  README.md
crates/loeres-backend-static/: Cargo.toml  README.md
crates/loeres-backend-static/src/: array.rs  dimension.rs  lib.rs  view.rs  workspace.rs
crates/loeres-backend-static/src/array/: tests.rs
crates/loeres-backend-static/src/dimension/: tests.rs
crates/loeres-backend-static/src/view/: tests.rs
crates/loeres-backend-static/src/workspace/: tests.rs
crates/loeres-backend-std/: Cargo.toml  README.md
crates/loeres-backend-std/src/: adapter.rs  batch.rs  dense.rs  internal.rs  lib.rs  sparse.rs  view.rs
crates/loeres-backend-std/src/dense/: tests.rs
crates/loeres-backend-std/src/sparse/: tests.rs
crates/loeres-cluster/: Cargo.toml  README.md
crates/loeres-cluster/src/: batch.rs  gateway.rs  lib.rs  model.rs  observe.rs  runtime.rs  solve.rs
crates/loeres-cluster/src/batch/: tests.rs
crates/loeres-cluster/src/model/: tests.rs
crates/loeres-cluster/src/runtime/: cancel.rs  executor.rs  tests.rs
crates/loeres-cluster/src/runtime/cancel/: tests.rs
crates/loeres-cluster/src/runtime/executor/: tests.rs
crates/loeres-cluster/src/solve/: projected_first_order.rs  tests.rs
crates/loeres-cluster/src/solve/projected_first_order/: tests.rs
crates/loeres-cluster/src/solve/projected_first_order/tests/: error_mapping.rs  orchestration.rs
crates/loeres-core/: Cargo.toml  README.md
crates/loeres-core/src/: access.rs  diagnostic.rs  dimension.rs  error.rs  lib.rs  problem.rs  scalar.rs  solver.rs  tests.rs
crates/loeres-core/src/tests/: scalar.rs  solver.rs
crates/loeres-device/: Cargo.toml  README.md
crates/loeres-device/src/: config.rs  diagnostic.rs  lib.rs  problem.rs  solve.rs  workspace.rs
crates/loeres-device/src/config/: tests.rs
crates/loeres-device/src/solve/: tests.rs
crates/loeres-device/src/solve/tests/: fixtures.rs
crates/loeres-device/src/workspace/: tests.rs
crates/loeres/src/: access.rs  diagnostic.rs  dimension.rs  error.rs  lib.rs  scalar.rs  solver.rs  tests.rs  validation.rs
crates/loeres/src/access/: matrix.rs  tests.rs  vector.rs
crates/loeres/src/scalar/: primitive.rs
crates/loeres/src/tests/: error.rs
crates/loeres/src/validation/: tests.rs
docs/: book.toml
docs/specs/: loeres-external-design-v1.md  loeres-requirements-v1.md  loeres-roadmap-milestones-v1.md
docs/src/: SUMMARY.md  adr.md  architecture.md  development.md  introduction.md  specifications.md  threat-model.md
rfcs/: README.md
rfcs/done/: 001-stratified-scalar.md  002-storage-agnostic-contracts.md  003-allocation-free-errors.md  004-static-storage-engine.md  005-typed-workspace-mechanics.md  006-deterministic-solver-kernel.md  007-dynamic-sparse-adapters.md  008-async-orchestration-budgets.md  012-validation-state-and-trusted-input-policy.md  014-core-solver-outcome-state.md  016-std-side-projected-first-order-cluster-kernel.md
rfcs/proposed/: 001-stratified-scalar.md  002-storage-agnostic-contracts.md  003-allocation-free-errors.md  004-static-storage-engine.md  005-typed-workspace-mechanics.md  006-deterministic-solver-kernel.md  007-dynamic-sparse-adapters.md  008-async-orchestration-budgets.md  009-observability-ffi-gateways.md  010-xtask-verification-governance.md  011-target-profiles-and-deterministic-math.md  012-validation-state-and-trusted-input-policy.md  013-conformance-corpus-and-numerical-parity.md  014-core-solver-outcome-state.md
xtask/: Cargo.toml
xtask/src/: checks.rs  main.rs
xtask/src/checks/: basic.rs  check_rfcs.rs  no_std.rs  panic_audit.rs  release_gate.rs  stubs.rs  util.rs  zero_bleed.rs
