[package]
name = "loeres-cluster"
description = "Loeres server-side solving: dynamic models, batch, orchestration, observability, optional FFI. std; server-only."
version.workspace       = true
edition.workspace       = true
rust-version.workspace  = true
license.workspace       = true
authors.workspace       = true
repository.workspace    = true

[features]
# All features are server-only. The baseline synchronous batch path is
# unconditional and runtime-agnostic; only parallel/async backends are gated.
# `ffi-gateway` must never be a default feature.
default = []
parallel-rayon = ["dep:rayon"]
async-tokio = ["dep:tokio"]
observability-tracing = []
observability-metrics = []
serde = []
ffi-gateway = []   # audited, opt-in native/legacy solver gateway (RFC 009)

[dependencies]
loeres = { workspace = true }
loeres-backend-std = { workspace = true }
rayon = { version = "1", optional = true }
tokio = { version = "1", optional = true, default-features = false, features = ["rt"] }
